Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50340

[REG: 5.4.2->5.5.0] Leave event is not delivered for QPushButton when menu opens

XMLWordPrintable

    • e4fb521b3f3b9e59146b7569b72aee08dbaeb268

      To reproduce:

      • run attached example
      • press on button

      Expected:

      • button to change color back to regular

      What happens:

      • hover color affects in this state as well

      In Qt 5.4.2, leave event was delivered for the QPushButton, but it is not delivered in Qt 5.5.0.

        1. qtbug50340_fixed.mp4
          124 kB
          Błażej Szczygieł
        2. qtbug50340.tar.gz
          0.8 kB
          Joni Poikelin
        3. reproducible_in_5.12.1.mp4
          1.22 MB
          Christian Aguilera
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mmutz Marc Mutz
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes